# docs/swagger.json
@@ -222,7 +222,7 @@
                 "summary": "初始化视频上传",
                 "parameters": [
                     {
-                        "description": "文件名",
+                        "description": "上传元数据",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -482,12 +482,21 @@
         "handler.InitiateUploadRequest": {
             "type": "object",
             "required": [
-                "file_name"
+                "file_name",
+                "title"
             ],
             "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "A funny video"
+                },
                 "file_name": {
                     "type": "string",
-                    "example": "holiday.mp4"
+                    "example": "movie.mp4"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "My Movie"
                 }
             }
         },
